<resources>
    <string name="app_name">Score Counter</string>
    <string name="home_name">HOME</string>
    <string name="visitor_name">VISITOR</string>
    <string name="initial_score">0</string>
    <string name="button_goal">GOAL !</string>
    <string name="button_yellow_card">Yellow cards</string>
    <string name="button_red_card">Red cards</string>
    <string name="button_shots">Shots on target</string>
    <string name="button_free_kicks">Free kicks</string>
    <string name="button_corners">Corners</string>
    <string name="button_reset">Reset</string>
    <string name="enter_team1">e.g. FC Barcelona or Spain</string>
    <string name="enter_team2">e.g. Juventus F.C. or Italy</string>
    <string name="start_game">Start</string>
</resources>
